--- a/pages/twitter/index.html
+++ b/pages/twitter/index.html
@@ -8,17 +8,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#4CAF50">
     <title>Giovanni Orlando | Twitter</title>
-    <link rel="icon" href="../images/favicon.ico">
+    <link rel="icon" href="../../images/favicon.ico">
     <link rel="manifest" href="manifest.json">
 
     <!-- scripts.js -->
-    <script defer src="../js/app.js" charset="utf-8"></script>
-    <script defer src="../js/jquery-2.2.4.js"></script>
-    <script defer src="../js/bootstrap.js"></script>
+    <script defer src="../../js/app.js" charset="utf-8"></script>
+    <script defer src="../../js/jquery-2.2.4.js"></script>
+    <script defer src="../../js/bootstrap.js"></script>
 
     <!-- styles.css -->
-    <link rel="stylesheet" href="../css/bootstrap.css">
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../../css/bootstrap.css">
+    <link rel="stylesheet" href="../../css/styles.css">
 </head>
 
 <body>
@@ -26,16 +26,16 @@
     <nav class="navbar" role="navigation">
         <ul class="navbar__tablist" role="tablist">
             <li class="navbar__tab" role="tabpanel">
-                <a href="../" role="tab" title="Home">Home</a>
+                <a href="/" role="tab" title="Home">Home</a>
             </li>
             <li class="navbar__tab" role="tabpanel">
-                <a href="./twitter" role="tab" title="Twitter" class="active">Twitter</a>
+                <a href="/pages/twitter" role="tab" title="Twitter" class="active">Twitter</a>
             </li>
             <li class="navbar__tab" role="tabpanel">
                 <a href="https://giovanni0918.wordpress.com/blog/" role="tab" title="Blog">Blog</a>
             </li>
             <li class="navbar__tab" role="tabpanel">
-                <a href="./contact" role="tab" title="Contact">Contact</a>
+                <a href="/pages/contact" role="tab" title="Contact">Contact</a>
             </li>
         </ul>
     </nav>
