Update color palette
Added to giovanni0918.github.io v0.02:
Fixed web app manifest.
Updated color palette in favor of higher contrast ratios.

Todo:
setup custom domain:
https://help.github.com/articles/using-a-custom-domain-with-github-pages
/

--- a/pages/twitter/index.html
+++ b/pages/twitter/index.html
@@ -6,19 +6,19 @@
     <meta name="author" content="Giovanni Orlando Rivera">
     <meta name="description" content="portfolio site built using es6, css3, and php">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#4CAF50">
+    <meta name="theme-color" content="#3F51B5">
     <title>Giovanni Orlando | Twitter</title>
-    <link rel="icon" href="../../images/favicon.ico">
-    <link rel="manifest" href="manifest.json">
+    <link rel="icon" href="/images/favicon.ico">
+    <link rel="manifest" href="/manifest.json">
 
     <!-- scripts.js -->
-    <script defer src="../../js/app.js" charset="utf-8"></script>
-    <script defer src="../../js/jquery-2.2.4.js"></script>
-    <script defer src="../../js/bootstrap.js"></script>
+    <script defer src="/js/app.js" charset="utf-8"></script>
+    <script defer src="/js/jquery-2.2.4.js"></script>
+    <script defer src="/js/bootstrap.js"></script>
 
     <!-- styles.css -->
-    <link rel="stylesheet" href="../../css/bootstrap.css">
-    <link rel="stylesheet" href="../../css/styles.css">
+    <link rel="stylesheet" href="/css/bootstrap.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
@@ -41,12 +41,12 @@
     </nav>
     <div class="container">
 
-        <div class="content">
-            <section id="twitter__timeline">
+        <main class="content">
+            <section id="twitter__timeline" style="pointer-events:none;">
                 <a class="twitter-timeline" href="https://twitter.com/Giovanni0918">Tweets by Giovanni0918</a>
                 <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
             </section>
-        </div>
+        </main>
 
     </div>
 </body>
