--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -6,19 +6,19 @@
     <meta name="author" content="Giovanni Orlando Rivera">
     <meta name="description" content="portfolio site built using es6, css3, and php">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#4CAF50">
+    <meta name="theme-color" content="#3F51B5">
     <title>Giovanni Orlando | Contact</title>
-    <link rel="icon" href="../../images/favicon.ico">
-    <link rel="manifest" href="manifest.json">
+    <link rel="icon" href="/images/favicon.ico">
+    <link rel="manifest" href="/manifest.json">
 
     <!-- scripts.js -->
-    <script defer src="../../js/app.js" charset="utf-8"></script>
-    <script defer src="../../js/jquery-2.2.4.js"></script>
-    <script defer src="../../js/bootstrap.js"></script>
+    <script defer src="/js/app.js" charset="utf-8"></script>
+    <script defer src="/js/jquery-2.2.4.js"></script>
+    <script defer src="/js/bootstrap.js"></script>
 
     <!-- styles.css -->
-    <link rel="stylesheet" href="../../css/bootstrap.css">
-    <link rel="stylesheet" href="../../css/styles.css">
+    <link rel="stylesheet" href="/css/bootstrap.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
@@ -65,6 +65,10 @@
                         <a class="list-group-item" href="https://github.com/giovanni0918" target="_blank">
                             <h4 class="list-group-item-heading">Github</h4>
                             <p class="list-group-item-text">github.com/giovanni0918</p>
+                        </a>
+                        <a class="list-group-item" href="https://plus.google.com/+GiovanniOrlandoi7" target="_blank">
+                            <h4 class="list-group-item-heading">Google+</h4>
+                            <p class="list-group-item-text">plus.google.com/+GiovanniOrlandoi7</p>
                         </a>
                     </div>
                 </div>
