Implement Blog page, add Social Media icons
Added to giovanni0918.github.io v0.03:
Implemented a Blog class that uses Wordpress rest api to get a list of
the posts from my site.
Iconography to the contact social media links.

Todo:
setup custom domain:
https://help.github.com/articles/using-a-custom-domain-with-github-pages
/

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a href="/pages/twitter" role="tab" title="Twitter">Twitter</a>
             </li>
             <li class="navbar__tab" role="tabpanel">
-                <a href="https://giovanni0918.wordpress.com/blog/" role="tab" title="Blog">Blog</a>
+                <a href="/pages/blog" role="tab" title="Blog">Blog</a>
             </li>
             <li class="navbar__tab" role="tabpanel">
                 <a href="/pages/contact" role="tab" title="Contact">Contact</a>
@@ -42,7 +42,7 @@
     <div class="container">
         <main class="content">
             <section id="iam">
-                <h2>I Am:</h2>
+                <h3>I Am:</h3>
                 <a class="list-group-item" href="#">
                     <h4 class="list-group-item-heading">Food Lover</h4>
                     <p class="list-group-item-text">Burgers, Pizza, Salad, Steak, you name it.</p>
@@ -57,7 +57,7 @@
                 </a>
             </section>
             <section id="education">
-                <h2>Education:</h2>
+                <h3>Education:</h3>
                 <div class="list-group">
                     <a class="list-group-item" href="//math.uprrp.edu/english/asunacad/syllabi.php" target="_blank" title="UPRP Mathematics Syllabi">
                         <h4 class="list-group-item-heading">University of Puerto Rico, Rio Piedras</h4>
@@ -75,7 +75,7 @@
             </section>
 
             <section id="experience">
-                <h2>Experience:</h2>
+                <h3>Experience:</h3>
                 <div class="list-group">
                     <a class="list-group-item" href="#" title="Vyrtuo Corporation">
                         <h4 class="list-group-item-heading">Vyrtuo Corportation</h4>
@@ -89,7 +89,7 @@
             </section>
 
             <section id="skills">
-                <h2>Skills:</h2>
+                <h3>Skills:</h3>
                 <div class="list-group">
                     <a class="list-group-item" href="https://github.com/giovanni0918" target="_blank" title="Link to github.com/giovanni0918">
                         <h4 class="list-group-item-heading">Programming Languages</h4>
@@ -124,7 +124,7 @@
             </section>
 
             <section id="projects">
-                <h2>Projects:</h2>
+                <h3>Projects:</h3>
                 <div class="list-group">
                     <a class="list-group-item" href="https://giovanni0918.github.io/omdb-search/" target="_blank" title="Link to omdb-search demo site">
                         <h4 class="list-group-item-heading">omdb-search</h4>
