--- a/pages/twitter/index.html
+++ b/pages/twitter/index.html
@@ -32,7 +32,7 @@
                 <a href="/pages/twitter" role="tab" title="Twitter" class="active">Twitter</a>
             </li>
             <li class="navbar__tab" role="tabpanel">
-                <a href="https://giovanni0918.wordpress.com/blog/" role="tab" title="Blog">Blog</a>
+                <a href="/pages/blog" role="tab" title="Blog">Blog</a>
             </li>
             <li class="navbar__tab" role="tabpanel">
                 <a href="/pages/contact" role="tab" title="Contact">Contact</a>
@@ -42,7 +42,7 @@
     <div class="container">
 
         <main class="content">
-            <section id="twitter__timeline" style="pointer-events:none;">
+            <section id="twitter__timeline">
                 <a class="twitter-timeline" href="https://twitter.com/Giovanni0918">Tweets by Giovanni0918</a>
                 <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
             </section>
