--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -1,3 +1,11 @@
+<!-- Disclaimer: I do not own any of the iconography from the social media links.
+Links to each of the img sources are below:
+Phone icon from https://upload.wikimedia.org/wikipedia/commons/e/e3/Fxemoji_u1F4F2.svg
+Gmail icon from https://upload.wikimedia.org/wikipedia/commons/4/45/New_Logo_Gmail.svg
+Github icon from: https://github.com/logos
+Twitter icon from https://upload.wikimedia.org/wikipedia/en/9/9f/Twitter_bird_logo_2012.svg
+Google plus icon from https://upload.wikimedia.org/wikipedia/commons/5/5c/Google_plus.svg
+ -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -32,7 +40,7 @@
                 <a href="/pages/twitter" role="tab" title="Twitter">Twitter</a>
             </li>
             <li class="navbar__tab" role="tabpanel">
-                <a href="https://giovanni0918.wordpress.com/blog/" role="tab" title="Blog">Blog</a>
+                <a href="/pages/blog" role="tab" title="Blog">Blog</a>
             </li>
             <li class="navbar__tab" role="tabpanel">
                 <a href="/pages/contact" role="tab" title="Contact" class="active">Contact</a>
@@ -43,7 +51,7 @@
 
         <main class="content">
             <section id="contact">
-                <h2 class="heading">Contact me:</h2>
+                <h3 class="heading">Contact me:</h3>
                 <div class="col-xs-12 col-sm-4">
                     <center><img class="avatar" src="../../images/IMG_20160731_151704.jpg" alt="Giovanni Orlando avatar"></center>
                 </div>
@@ -51,24 +59,49 @@
 
                     <div class="list-group">
                         <a class="list-group-item" href="tel:+1-787-550-4299">
-                            <h4 class="list-group-item-heading">Phone</h4>
-                            <p class="list-group-item-text">787-550-4299</p>
+                            <div class="col-xs-10">
+                                <h4 class="list-group-item-heading">Phone</h4>
+                                <p class="list-group-item-text">787-550-4299</p>
+                            </div>
+                            <div class="col-xs-2">
+                                <img src="/images/phone__icon.svg" alt="phone icon">
+                            </div>
                         </a>
                         <a class="list-group-item" href="mailto:gorlandor@gmail.com" target="_blank">
-                            <h4 class="list-group-item-heading">Email</h4>
-                            <p class="list-group-item-text">gorlandor@gmail.com</p>
+                            <div class="col-xs-10">
+                                <h4 class="list-group-item-heading">Email</h4>
+                                <p class="list-group-item-text">gorlandor@gmail.com</p>
+                            </div>
+                            <div class="col-xs-2">
+                                <img src="/images/gmail__icon.svg" alt="gmail icon">
+                            </div>
                         </a>
                         <a class="list-group-item" href="https://twitter.com/giovanni0918" target="_blank">
-                            <h4 class="list-group-item-heading">Twitter</h4>
-                            <p class="list-group-item-text">@giovanni0918</p>
+                            <div class="col-xs-10">
+                                <h4 class="list-group-item-heading">Twitter</h4>
+                                <p class="list-group-item-text">@giovanni0918</p>
+                            </div>
+                            <div class="col-xs-2">
+                                <img src="/images/twitter__icon.svg" alt="twitter icon">
+                            </div>
                         </a>
                         <a class="list-group-item" href="https://github.com/giovanni0918" target="_blank">
-                            <h4 class="list-group-item-heading">Github</h4>
-                            <p class="list-group-item-text">github.com/giovanni0918</p>
+                            <div class="col-xs-10">
+                                <h4 class="list-group-item-heading">Github</h4>
+                                <p class="list-group-item-text">github.com/giovanni0918</p>
+                            </div>
+                            <div class="col-xs-2">
+                                <img src="/images/Octocat.png" alt="github icon">
+                            </div>
                         </a>
                         <a class="list-group-item" href="https://plus.google.com/+GiovanniOrlandoi7" target="_blank">
-                            <h4 class="list-group-item-heading">Google+</h4>
-                            <p class="list-group-item-text">plus.google.com/+GiovanniOrlandoi7</p>
+                            <div class="col-xs-10">
+                                <h4 class="list-group-item-heading">Google+</h4>
+                                <p class="list-group-item-text">google.com/+GiovanniOrlandoi7</p>
+                            </div>
+                            <div class="col-xs-2">
+                                <img src="/images/googleplus__icon.svg" alt="google plus icon">
+                            </div>
                         </a>
                     </div>
                 </div>
