Improve Contact page layout, fix roles
Added to giovanni0918.github.io v0.04:
Social-media-link css classes for the contact page. Moved away from
using Bootstrap’s list-group-item.

Removed redundant aria roles list for ul, listitem for li.

Added aria-role=“banner” to the header element.

Fixed Blog post li paragraph tag bug.

Todo:
setup custom domain:
https://help.github.com/articles/using-a-custom-domain-with-github-pages
/

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <header class="header">Giovanni Orlando</header>
+    <header class="header" role="banner">Giovanni Orlando</header>
     <nav class="navbar" role="navigation">
         <ul class="navbar__tablist" role="tablist">
             <li class="navbar__tab" role="tabpanel">
