--- a/pages/twitter/index.html
+++ b/pages/twitter/index.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <header class="header">@Giovanni0918</header>
+    <header class="header" role="banner">@Giovanni0918</header>
     <nav class="navbar" role="navigation">
         <ul class="navbar__tablist" role="tablist">
             <li class="navbar__tab" role="tabpanel">
