--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -30,7 +30,7 @@ Google plus icon from https://upload.wikimedia.org/wikipedia/commons/5/5c/Google
 </head>
 
 <body>
-    <header class="header">Giovanni Orlando</header>
+    <header class="header" role="banner">Giovanni Orlando</header>
     <nav class="navbar" role="navigation">
         <ul class="navbar__tablist" role="tablist">
             <li class="navbar__tab" role="tabpanel">
@@ -56,54 +56,43 @@ Google plus icon from https://upload.wikimedia.org/wikipedia/commons/5/5c/Google
                     <center><img class="avatar" src="../../images/IMG_20160731_151704.jpg" alt="Giovanni Orlando avatar"></center>
                 </div>
                 <div class="col-xs-12 col-sm-8">
-
-                    <div class="list-group">
-                        <a class="list-group-item" href="tel:+1-787-550-4299">
-                            <div class="col-xs-10">
-                                <h4 class="list-group-item-heading">Phone</h4>
-                                <p class="list-group-item-text">787-550-4299</p>
-                            </div>
-                            <div class="col-xs-2">
+                    <ul class="social-media-link__list">
+                        <li class="social-media-link">
+                            <a href="tel:+1-787-550-4299">
                                 <img src="/images/phone__icon.svg" alt="phone icon">
-                            </div>
-                        </a>
-                        <a class="list-group-item" href="mailto:gorlandor@gmail.com" target="_blank">
-                            <div class="col-xs-10">
-                                <h4 class="list-group-item-heading">Email</h4>
-                                <p class="list-group-item-text">gorlandor@gmail.com</p>
-                            </div>
-                            <div class="col-xs-2">
+                                <label for="social-media-link--phone">Phone</label>
+                                <p id="social-media-link--phone">787-550-4299</p>
+                            </a>
+                        </li>
+                        <li class="social-media-link">
+                            <a href="mailto:gorlandor@gmail.com" target="_blank">
                                 <img src="/images/gmail__icon.svg" alt="gmail icon">
-                            </div>
-                        </a>
-                        <a class="list-group-item" href="https://twitter.com/giovanni0918" target="_blank">
-                            <div class="col-xs-10">
-                                <h4 class="list-group-item-heading">Twitter</h4>
-                                <p class="list-group-item-text">@giovanni0918</p>
-                            </div>
-                            <div class="col-xs-2">
+                                <label for="social-media-link--phone">Email</label>
+                                <p id="social-media-link--email">gorlandor@gmail.com</p>
+                            </a>
+                        </li>
+                        <li class="social-media-link">
+                            <a href="https://twitter.com/giovanni0918" target="_blank">
                                 <img src="/images/twitter__icon.svg" alt="twitter icon">
-                            </div>
-                        </a>
-                        <a class="list-group-item" href="https://github.com/giovanni0918" target="_blank">
-                            <div class="col-xs-10">
-                                <h4 class="list-group-item-heading">Github</h4>
-                                <p class="list-group-item-text">github.com/giovanni0918</p>
-                            </div>
-                            <div class="col-xs-2">
+                                <label for="social-media-link--phone">Twitter</label>
+                                <p id="social-media-link--phone">@giovanni0918</p>
+                            </a>
+                        </li>
+                        <li class="social-media-link">
+                            <a href="https://github.com/giovanni0918" target="_blank">
                                 <img src="/images/Octocat.png" alt="github icon">
-                            </div>
-                        </a>
-                        <a class="list-group-item" href="https://plus.google.com/+GiovanniOrlandoi7" target="_blank">
-                            <div class="col-xs-10">
-                                <h4 class="list-group-item-heading">Google+</h4>
-                                <p class="list-group-item-text">google.com/+GiovanniOrlandoi7</p>
-                            </div>
-                            <div class="col-xs-2">
+                                <label for="social-media-link--github">Github</label>
+                                <p id="social-media-link--github">github.com/giovanni0918</p>
+                            </a>
+                        </li>
+                        <li class="social-media-link">
+                            <a href="https://google.com/+GiovanniOrlandoi7" target="_blank">
                                 <img src="/images/googleplus__icon.svg" alt="google plus icon">
-                            </div>
-                        </a>
-                    </div>
+                                <label for="social-media-link--googleplus">Google+</label>
+                                <p id="social-media-link--phone">google.com/+GiovanniOrlandoi7</p>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </section>
         </main>
