--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -21,11 +21,9 @@ Google plus icon from https://upload.wikimedia.org/wikipedia/commons/5/5c/Google
 
     <!-- scripts.js -->
     <script defer src="/js/app.js" charset="utf-8"></script>
-    <script defer src="/js/jquery-2.2.4.js"></script>
-    <script defer src="/js/bootstrap.js"></script>
-
+    
     <!-- styles.css -->
-    <link rel="stylesheet" href="/css/bootstrap.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 
