--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -21,7 +21,7 @@ Google plus icon from https://upload.wikimedia.org/wikipedia/commons/5/5c/Google
 
     <!-- scripts.js -->
     <script defer src="/js/app.js" charset="utf-8"></script>
-    
+
     <!-- styles.css -->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/styles.css">
@@ -94,8 +94,22 @@ Google plus icon from https://upload.wikimedia.org/wikipedia/commons/5/5c/Google
                 </div>
             </section>
         </main>
-
     </div>
+    <script>
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+        ga('create', 'UA-82693415-1', 'auto');
+        ga('send', 'pageview');
+    </script>
 </body>
 
 </html>
