--- a/pages/twitter/index.html
+++ b/pages/twitter/index.html
@@ -36,16 +36,27 @@
             </li>
         </ul>
     </nav>
-    <div class="container">
-
-        <main class="content">
-            <section id="twitter__timeline">
-                <a class="twitter-timeline" href="https://twitter.com/Giovanni0918">Tweets by Giovanni0918</a>
-                <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
-            </section>
-        </main>
-
-    </div>
+    <main class="content">
+        <section id="twitter__timeline">
+            <a class="twitter-timeline" href="https://twitter.com/Giovanni0918">Tweets by Giovanni0918</a>
+            <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+        </section>
+    </main>
+    <script>
+        (function(i, s, o, g, r, a, m) {
+            i['GoogleAnalyticsObject'] = r;
+            i[r] = i[r] || function() {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date();
+            a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0];
+            a.async = 1;
+            a.src = g;
+            m.parentNode.insertBefore(a, m)
+        })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+        ga('create', 'UA-82693415-1', 'auto');
+        ga('send', 'pageview');
+    </script>
 </body>
 
 </html>
