Drop css variables, Minify styles
Added to giovanni0918.github.io v0.08:
Rolled back from css variables to hex colors in favor of cross browser
support.
New styles.min.css

setup custom domain:
https://help.github.com/articles/using-a-custom-domain-with-github-pages
/
setup tls: https

--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -24,7 +24,7 @@ Google plus icon from https://upload.wikimedia.org/wikipedia/commons/5/5c/Google
 
     <!-- styles.css -->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="/css/styles.min.css">
 </head>
 
 <body>
