--- a/pages/twitter/index.html
+++ b/pages/twitter/index.html
@@ -15,7 +15,7 @@
     <script defer src="/js/app.js" charset="utf-8"></script>
 
     <!-- styles.css -->
-    <link rel="stylesheet" href="/css/styles.min.css">
+    <link rel="stylesheet" href="/dist/styles.css">
 </head>
 
 <body>
