--- a/pages/twitter/index.html
+++ b/pages/twitter/index.html
@@ -26,13 +26,13 @@
                 <a href="/" role="tab" title="Home">Home</a>
             </li>
             <li class="navbar__tab" role="tabpanel">
-                <a href="/pages/twitter" role="tab" title="Twitter" class="active">Twitter</a>
+                <a href="/pages/twitter/" role="tab" title="Twitter" class="active">Twitter</a>
             </li>
             <li class="navbar__tab" role="tabpanel">
-                <a href="/pages/blog" role="tab" title="Blog">Blog</a>
+                <a href="/pages/blog/" role="tab" title="Blog">Blog</a>
             </li>
             <li class="navbar__tab" role="tabpanel">
-                <a href="/pages/contact" role="tab" title="Contact">Contact</a>
+                <a href="/pages/contact/" role="tab" title="Contact">Contact</a>
             </li>
         </ul>
     </nav>
