Update SW register, and LICENSE.md
Updated /contact/index.html to use bootstrap.min.css instead of the
regular one.

Todo:
Finish icon.
setup custom domain:
https://help.github.com/articles/using-a-custom-domain-with-github-pages
/
setup tls: https

--- a/index.html
+++ b/index.html
@@ -14,16 +14,16 @@
         <!-- Add to homescreen for Chrome on Android -->
         <meta name="mobile-web-app-capable" content="yes">
         <meta name="application-name" content="Giovanni Orlando | Web">
-        <link rel="icon" sizes="192x192" href="/images/touch/chrome-touch-icon-192x192.png">
+        <link rel="icon" sizes="192x192" href="/dist/images/touch/chrome-touch-icon-192x192.png">
 
         <!-- Add to homescreen for Safari on iOS -->
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black">
         <meta name="apple-mobile-web-app-title" content="Giovanni Orlando | Web">
-        <link rel="apple-touch-icon" href="/images/touch/apple-touch-icon.png">
+        <link rel="apple-touch-icon" href="/dist/images/touch/apple-touch-icon.png">
 
         <!-- Tile icon for Win8 (144x144 + tile color) -->
-        <meta name="msapplication-TileImage" content="/images/touch/ms-touch-icon-144x144-precomposed.png">
+        <meta name="msapplication-TileImage" content="/dist/images/touch/ms-touch-icon-144x144-precomposed.png">
         <meta name="msapplication-TileColor" content="#3F51B5">
 
         <title>Giovanni Orlando | Web</title>
@@ -183,10 +183,10 @@
         <script>
             //setup SW
             if ('serviceWorker' in navigator) {
-                navigator.serviceWorker.register('/sw.js').then(function() {
+                navigator.serviceWorker.register('/sw.js').then(() => {
                     console.log('SW registered');
-                }).catch(function() {
-                    console.warn('SW offline');
+                }).catch(e => {
+                    console.warn(e);
                 });
             }
         </script>
