--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -23,7 +23,7 @@ Google plus icon from https://upload.wikimedia.org/wikipedia/commons/5/5c/Google
     <script defer src="/js/app.js" charset="utf-8"></script>
 
     <!-- styles.css -->
-    <link rel="stylesheet" href="/css/bootstrap.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/dist/styles.css">
 </head>
 
