--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -5,6 +5,7 @@ Gmail icon from https://upload.wikimedia.org/wikipedia/commons/4/45/New_Logo_Gma
 Github icon from: https://github.com/logos
 Twitter icon from https://upload.wikimedia.org/wikipedia/en/9/9f/Twitter_bird_logo_2012.svg
 Google plus icon from https://upload.wikimedia.org/wikipedia/commons/5/5c/Google_plus.svg
+Youtube icon from https://www.youtube.com/yt/brand/downloads.html
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -19,12 +20,11 @@ Google plus icon from https://upload.wikimedia.org/wikipedia/commons/5/5c/Google
     <link rel="icon" href="/images/favicon.ico">
     <link rel="manifest" href="/manifest.json">
 
-    <!-- scripts.js -->
-    <script defer src="/js/app.js" charset="utf-8"></script>
-
     <!-- styles.css -->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/dist/styles.css">
+    <!-- scripts.js -->
+    <script defer src="/js/app.js" charset="utf-8"></script>
 </head>
 
 <body>
@@ -47,78 +47,88 @@ Google plus icon from https://upload.wikimedia.org/wikipedia/commons/5/5c/Google
     </nav>
     <main class="content">
         <h3>Contact me</h3>
-        <section class="wrapper--avatar">
-            <center><img class="avatar" src="/dist/images/avatar--contact.jpeg" alt="Giovanni Orlando avatar"></center>
+        <section class="wrapper--avatar flex-center">
+            <img class="avatar" src="/dist/images/avatar__img.jpg" alt="Giovanni Orlando avatar">
         </section>
         <section class="wrapper--contact-links">
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
 
-                <div class="circle circle--gmail">
+                <div class="tile flex-center tile--gmail">
                     <a href="mailto:gorlandor@gmail.com">
                         <img src="/dist/images/gmail__icon.svg" alt="gmail__icon" class="social-media__icon">
                     </a>
                 </div>
-                <span>gorlandor@gmail.com</span>
+                <span class="social-media__handle">gorlandor@gmail.com</span>
                 <br>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
 
-                <div class="circle circle--lime">
-                    <a href="tel:+1-787-550-4299">
+                <div class="tile flex-center tile--lime">
+                    <a href="sms:+1-787-550-4299">
                         <img src="/dist/images/phone__icon.svg" alt="phone__icon" class="social-media__icon">
                     </a>
                 </div>
-                <span>P: 787-550-4299</span>
+                <span class="social-media__handle">P: 787-550-4299</span>
                 <br>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
 
-                <div class="circle circle--twitter">
+                <div class="tile flex-center tile--twitter">
                     <a href="https://twitter.com/giovanni0918">
                         <img src="/dist/images/twitter__icon.svg" alt="twitter__icon" class="social-media__icon">
                     </a>
                 </div>
-                <span>@giovanni0918</span>
+                <span class="social-media__handle">@giovanni0918</span>
                 <br>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
 
-                <div class="circle circle--cyan">
+                <div class="tile flex-center tile--cyan">
                     <a href="https://github.com/giovanni0918">
                         <img src="/dist/images/Octocat.png" alt="Octocat" class="social-media__icon">
                     </a>
                 </div>
-                <span>github.com/giovanni0918</span>
+                <span class="social-media__handle">github.com/giovanni0918</span>
                 <br>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
 
-                <div class="circle circle--brown">
+                <div class="tile flex-center tile--brown">
                     <a href="https://instagram.com/giovanni0918">
                         <img src="/dist/images/instagram__icon.png" alt="instagram" class="social-media__icon">
                     </a>
                 </div>
-                <span>@giovanni0918</span>
+                <span class="social-media__handle">@giovanni0918</span>
                 <br>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
 
-                <div class="circle circle--facebook">
+                <div class="tile flex-center tile--facebook">
                     <a href="https://facebook.com/giovanni0918">
                         <img src="/dist/images/facebook__icon.svg" alt="facebook__icon" class="social-media__icon">
                     </a>
                 </div>
-                <span>fb.com/giovanni0918</span>
+                <span class="social-media__handle">fb.com/giovanni0918</span>
                 <br>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
 
-                <div class="circle">
+                <div class="tile flex-center">
                     <a href="https://google.com/+GiovanniOrlandoi7">
                         <img src="/dist/images/googleplus__icon.svg" alt="googleplus__icon" class="social-media__icon">
                     </a>
                 </div>
-                <span>/+GiovanniOrlandoi7</span>
+                <span class="social-media__handle">/+GiovanniOrlandoi7</span>
+                <br>
+            </div>
+            <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+
+                <div class="tile flex-center tile--youtube">
+                    <a href="https://youtube.com/GiovanniOrlandoi7">
+                        <img src="/dist/images/youtube__icon.png" alt="youtube__icon" class="social-media__icon">
+                    </a>
+                </div>
+                <span class="social-media__handle">/GiovanniOrlandoi7</span>
                 <br>
             </div>
         </section>
@@ -130,7 +140,7 @@ Google plus icon from https://upload.wikimedia.org/wikipedia/commons/5/5c/Google
                 (i[r].q = i[r].q || []).push(arguments)
             }, i[r].l = 1 * new Date();
             a = s.createElement(o),
-                m = s.getElementsByTagName(o)[0];
+            m = s.getElementsByTagName(o)[0];
             a.async = 1;
             a.src = g;
             m.parentNode.insertBefore(a, m)
