Update index.html, link to N-Queens 👑 project
Link to N-Queens 👑 Problem solver demo site

--- a/index.html
+++ b/index.html
@@ -139,6 +139,10 @@
             <section id="projects">
                 <h3>Projects:</h3>
                 <ul class="list">
+                    <li class="list-item" title="Link to N-Queens 👑 Problem solver demo site">
+                        <a href="https://giovanni0918.github.io/n-queens/" class="list-item__heading" target="_blank">N-Queens 👑 Problem solver</a>
+                        <p class="list-item__text">A JavaScript (ES 2015) implementation of the N-Queens 👑 Problem solver.</p>
+                    </li>
                     <li class="list-item" title="Link to omdb-search demo site">
                         <a href="https://giovanni0918.github.io/omdb-search/" class="list-item__heading" target="_blank">omdb-search</a>
                         <p class="list-item__text">A Polymer custom element that fetches movie, series, episode data from the Open Movie Database (OMDb) api.</p>
