--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <h3>Projects:</h3>
                 <ul class="list">
                     <li class="list-item" title="Link to N-Queens 👑 Problem solver demo site">
-                        <a href="https://giovanni0918.github.io/n-queens/" class="list-item__heading" target="_blank">N-Queens 👑 Problem solver</a>
+                        <a href="https://giovanni0918.github.io/n-queens/" class="list-item__heading" target="_blank">N-Queens 👑 Progressive Web App</a>
                         <p class="list-item__text">A JavaScript (ES 2015) implementation of the N-Queens 👑 Problem solver.</p>
                     </li>
                     <li class="list-item" title="Link to omdb-search demo site">
