Add react-starter-kit to projects

--- a/index.html
+++ b/index.html
@@ -139,6 +139,10 @@
             <section id="projects">
                 <h3>Projects:</h3>
                 <ul class="list">
+                    <li class="list-item" title="Link to React Starter Kit demo site">
+                        <a href="https://giovanni0918.github.io/react-starter-kit/" class="list-item__heading" target="_blank">React Starter Kit 🚀 PWA</a>
+                        <p class="list-item__text">A React.js progressive-web-app starter-kit, built using Webpack module bundler and react-router.</p>
+                    </li>
                     <li class="list-item" title="Link to N-Queens 👑 Problem solver demo site">
                         <a href="https://giovanni0918.github.io/n-queens/" class="list-item__heading" target="_blank">N-Queens 👑 Progressive Web App</a>
                         <p class="list-item__text">A JavaScript (ES 2015) implementation of the N-Queens 👑 Problem solver.</p>
