Add Enforce ssl script

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
         <meta name="description" content="portfolio site built using es6, css3, and php">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#3F51B5">
-
+        <!-- Enforce ssl -->
+        <script>
+          const host='giovanni-orlando.com';if((host===window.location.host)&&(window.location.protocol!=='https:')){window.location.protocol='https'}
+        </script>
         <!-- Disable tap highlight on IE -->
         <meta name="msapplication-tap-highlight" content="no">
 
