--- a/pages/twitter/index.html
+++ b/pages/twitter/index.html
@@ -7,6 +7,10 @@
     <meta name="description" content="portfolio site built using es6, css3, and php">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#3F51B5">
+    <!-- Enforce ssl -->
+    <script>
+      const host='giovanni-orlando.com';if((host===window.location.host)&&(window.location.protocol!=='https:')){window.location.protocol='https'}
+    </script>
     <title>Giovanni Orlando | Twitter</title>
     <link rel="icon" href="/images/favicon.ico">
     <link rel="manifest" href="/manifest.json">
