--- a/pages/twitter/index.html
+++ b/pages/twitter/index.html
@@ -9,7 +9,7 @@
     <meta name="theme-color" content="#3F51B5">
     <!-- Enforce ssl -->
     <script>
-      const host='giovanni-orlando.com';if((host===window.location.host)&&(window.location.protocol!=='https:')){window.location.protocol='https'}
+      const host='www.giovanni-orlando.com';if((host===window.location.host)&&(window.location.protocol!=='https:')){window.location.protocol='https:'}
     </script>
     <title>Giovanni Orlando | Twitter</title>
     <link rel="icon" href="/images/favicon.ico">
