Update Enforce ssl script

--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -18,7 +18,7 @@ Youtube icon from https://www.youtube.com/yt/brand/downloads.html
     <meta name="theme-color" content="#3F51B5">
     <!-- Enforce ssl -->
     <script>
-      const host='www.giovanni-orlando.com';if((host===window.location.host)&&(window.location.protocol!=='https:')){window.location.protocol='https:'}
+      const host='giovanni-orlando.com';if((host===window.location.host||`www.${host}`===window.location.host)&&(window.location.protocol!=='https:')){window.location.protocol='https:'}
     </script>
     <title>Giovanni Orlando | Contact</title>
     <link rel="icon" href="/images/favicon.ico">
