Add rel=canonical urls
https://support.google.com/webmasters/answer/139066?hl=en

--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -22,6 +22,7 @@ Youtube icon from https://www.youtube.com/yt/brand/downloads.html
     </script>
     <title>Giovanni Orlando | Contact</title>
     <link rel="icon" href="/images/favicon.ico">
+    <link rel="canonical" href="https://giovanni-orlando.com/pages/contact/">
     <link rel="manifest" href="/manifest.json">
 
     <!-- styles.css -->
