--- a/pages/twitter/index.html
+++ b/pages/twitter/index.html
@@ -13,6 +13,7 @@
     </script>
     <title>Giovanni Orlando | Twitter</title>
     <link rel="icon" href="/images/favicon.ico">
+    <link rel="canonical" href="https://giovanni-orlando.com/pages/twitter/">
     <link rel="manifest" href="/manifest.json">
 
     <!-- scripts.js -->
