--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 
         <title>Giovanni Orlando | Web</title>
         <link rel="icon" href="/images/favicon.ico">
+        <link rel="canonical" href="https://giovanni-orlando.com/">
         <link rel="manifest" href="/manifest.json">
 
         <!-- scripts.js -->
