Update home and contact pages
- added certs section
- added rails and jekyll to ruby li
- fixed alt tags

--- a/index.html
+++ b/index.html
@@ -82,10 +82,6 @@
             <section id="education">
                 <h3>Education:</h3>
                 <ul class="list">
-                    <li class="list-item" title="UPRP Mathematics Syllabi">
-                        <a href="//math.uprrp.edu/english/asunacad/syllabi.php" class="list-item__heading" target="_blank" rel="noopener">University of Puerto Rico, Rio Piedras</a>
-                        <p class="list-item__text">Masters degree in Applied Mathematics <span aria-hidden="true">|</span> present</p>
-                    </li>
                     <li class="list-item" title="PUPR Computer Engineering">
                         <a href="#" class="list-item__heading">Polytechnic University of Puerto Rico</a>
                         <p class="list-item__text">Bachelor's degree in Computer Engineering <span aria-hidden="true">|</span> 2016</p>
@@ -93,6 +89,42 @@
                     <li class="list-item">
                         <a href="#" class="list-item__heading">Colegio Maria Auxiliadora</a>
                         <p class="list-item__text">High school degree <span aria-hidden="true">|</span> 2011</p>
+                    </li>
+                </ul>
+            </section>
+
+            <section id="certifications">
+                <h3>Certifications:</h3>
+                <ul class="list">
+                    <li class="list-item">
+                        <a href="https://support.apple.com/en-us/HT205735" class="list-item__heading">ACIT 2016 iOS Service Certification Exam (iOS-16A)</a>
+                        <p class="list-item__text">
+                            Use the correct engaging questions to better troubleshoot a customer issue. Demonstrate deductive reasoning through logical
+                            question progression. Correctly use evaluative questions to isolate customer issues to educational, environmental, software,
+                            or hardware opportunities. Describe the privacy settings that can be put in place for apps. Use Apple documentation,
+                            approved tools, and appropriate service strategies to safely repair iOS Products.
+                        </p>
+                    </li>
+                    <li class="list-item">
+                        <a href="https://support.apple.com/en-us/HT205737" class="list-item__heading">Apple Service Fundamentals Exam (SVC-16A)</a>
+                        <p class="list-item__text">
+                            Identify and practice ESD precautions. Identify the components of an ESD-compliant workstation. Use the proper tools, equipment,
+                            and procedures to set up a workspace that minimizes or eliminates electrostatic discharge damage. Identify
+                            the customer statements that generate a Safety First case. Demonstrate the proper and safe handling of batteries
+                            and portable computer case assemblies with a built-in battery. Find and use any Apple product's serial number
+                            to determine its level of coverage. Describe the impact of poor notes on the repair cycle and customer satisfaction.
+                            Demonstrate basic troubleshooting and deductive reasoning skills.
+                        </p>
+                    </li>
+                    <li class="list-item">
+                        <a href="" class="list-item__heading">iOS Qualification Exam 2015</a>
+                        <p class="list-item__text">
+                            Deliver customer technical support. Actively diagnose and repair iOS products released up to 2015. Documentation of troubleshooting,
+                            diagnostic and repair procedures. Order and receive parts. Identify the iOS devices that have Apple-specific
+                            features and components. Provide an overview of the steps in the device setup and activation process. Recognize
+                            and respond to SIM Card Alerts during the activation process. Describe the benefits of iTunes and iCloud
+                            backups.
+                        </p>
                     </li>
                 </ul>
             </section>
@@ -134,7 +166,12 @@
                             </li>
                             <li class="list-item--nested">PHP</li>
                             <li class="list-item--nested">MySQL</li>
-                            <li class="list-item--nested">Ruby</li>
+                            <li class="list-item--nested">Ruby
+                                <ul>
+                                    <li>Rails</li>
+                                    <li>Jekyll</li>
+                                </ul>
+                            </li>
                             <li class="list-item--nested">C++</li>
                         </ol>
                     </li>
