--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -60,7 +60,7 @@ Youtube icon from https://www.youtube.com/yt/brand/downloads.html
 
                 <div class="tile flex-center tile--gmail">
                     <a href="mailto:gorlandor@gmail.com">
-                        <img src="/dist/images/gmail__icon.svg" alt="gmail__icon" class="social-media__icon">
+                        <img src="/dist/images/gmail__icon.svg" alt="email" class="social-media__icon">
                     </a>
                 </div>
                 <span class="social-media__handle">gorlandor@gmail.com</span>
@@ -70,7 +70,7 @@ Youtube icon from https://www.youtube.com/yt/brand/downloads.html
 
                 <div class="tile flex-center tile--lime">
                     <a href="sms:+1-787-550-4299">
-                        <img src="/dist/images/phone__icon.svg" alt="phone__icon" class="social-media__icon">
+                        <img src="/dist/images/phone__icon.svg" alt="phone" class="social-media__icon">
                     </a>
                 </div>
                 <span class="social-media__handle">P: 787-550-4299</span>
@@ -80,7 +80,7 @@ Youtube icon from https://www.youtube.com/yt/brand/downloads.html
 
                 <div class="tile flex-center tile--twitter">
                     <a href="https://twitter.com/giovanni0918">
-                        <img src="/dist/images/twitter__icon.svg" alt="twitter__icon" class="social-media__icon">
+                        <img src="/dist/images/twitter__icon.svg" alt="twitter" class="social-media__icon">
                     </a>
                 </div>
                 <span class="social-media__handle">@giovanni0918</span>
@@ -90,7 +90,7 @@ Youtube icon from https://www.youtube.com/yt/brand/downloads.html
 
                 <div class="tile flex-center tile--cyan">
                     <a href="https://github.com/giovanni0918">
-                        <img src="/dist/images/Octocat.png" alt="Octocat" class="social-media__icon">
+                        <img src="/dist/images/Octocat.png" alt="github" class="social-media__icon">
                     </a>
                 </div>
                 <span class="social-media__handle">github.com/giovanni0918</span>
@@ -110,7 +110,7 @@ Youtube icon from https://www.youtube.com/yt/brand/downloads.html
 
                 <div class="tile flex-center tile--facebook">
                     <a href="https://facebook.com/giovanni0918">
-                        <img src="/dist/images/facebook__icon.svg" alt="facebook__icon" class="social-media__icon">
+                        <img src="/dist/images/facebook__icon.svg" alt="facebook" class="social-media__icon">
                     </a>
                 </div>
                 <span class="social-media__handle">fb.com/giovanni0918</span>
@@ -120,7 +120,7 @@ Youtube icon from https://www.youtube.com/yt/brand/downloads.html
 
                 <div class="tile flex-center">
                     <a href="https://google.com/+GiovanniOrlandoi7">
-                        <img src="/dist/images/googleplus__icon.svg" alt="googleplus__icon" class="social-media__icon">
+                        <img src="/dist/images/googleplus__icon.svg" alt="googleplus" class="social-media__icon">
                     </a>
                 </div>
                 <span class="social-media__handle">/+GiovanniOrlandoi7</span>
@@ -130,7 +130,7 @@ Youtube icon from https://www.youtube.com/yt/brand/downloads.html
 
                 <div class="tile flex-center tile--youtube">
                     <a href="https://youtube.com/GiovanniOrlandoi7">
-                        <img src="/dist/images/youtube__icon.png" alt="youtube__icon" class="social-media__icon">
+                        <img src="/dist/images/youtube__icon.png" alt="youtube" class="social-media__icon">
                     </a>
                 </div>
                 <span class="social-media__handle">/GiovanniOrlandoi7</span>
