Update Gulpfile, App js, Package json
- Remove unused images
- Remove unused gulp tasks
- Move scripts to dist dir
- Update app.js to:
https://gist.github.com/giovanni0918/ab20d7cf4a3d44fbbedf3127ed9ea8ac

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <link rel="manifest" href="/manifest.json">
 
     <!-- scripts.js -->
+    <script defer src="/dist/app.js" charset="utf-8"></script>
     <script defer src="/dist/repos.js" charset="utf-8"></script>
     <!-- styles.css -->
     <style media="screen">
