--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -29,7 +29,7 @@ Youtube icon from https://www.youtube.com/yt/brand/downloads.html
     <link rel="stylesheet" href="/css/bootstrap.min.css">
     <link rel="stylesheet" href="/dist/styles.css">
     <!-- scripts.js -->
-    <script defer src="/js/app.js" charset="utf-8"></script>
+    <script defer src="/dist/app.js" charset="utf-8"></script>
 </head>
 
 <body>
