--- a/pages/twitter/index.html
+++ b/pages/twitter/index.html
@@ -17,7 +17,7 @@
     <link rel="manifest" href="/manifest.json">
 
     <!-- scripts.js -->
-    <script defer src="/js/app.js" charset="utf-8"></script>
+    <script defer src="/dist/app.js" charset="utf-8"></script>
 
     <!-- styles.css -->
     <link rel="stylesheet" href="/dist/styles.css">
